# sdl2-opengl-game-engine

./: .gitignore  how-to.txt
Box2D/: Box2D.sln  Box2D.vcxproj  Box2D.vcxproj.filters  CMakeLists.txt
HugesWhoSlots/: CMakeLists.txt  HugesWhoSlots.sln  HugesWhoSlots.vcxproj  HugesWhoSlots.vcxproj.filters
HugesWhoSlots/source/: CMakeLists.txt
KittyBall/: CMakeLists.txt  KittyBall.sln  KittyBall.vcxproj  KittyBall.vcxproj.filters
KittyBall/source/: CMakeLists.txt  game.rc
PachinkoChallenge/: CMakeLists.txt  PachinkoChallenge.filters  PachinkoChallenge.project  PachinkoChallenge.sln  PachinkoChallenge.vcxproj  PachinkoChallenge.vcxproj.filters  pachinko.code-workspace
PachinkoChallenge/development/: Funware logo RGB.xcf
PachinkoChallenge/source/: CMakeLists.txt  game.rc
angelscript/: CMakeLists.txt  version.txt
battleHardened/: CMakeLists.txt  battleHardened.sln  gameTemplate.vcxproj  gameTemplate.vcxproj.filters
battleHardened/source/: CMakeLists.txt
bulletPhysics/: CMakeLists.txt
c_consoleTestApp/: main.c
com.hugheswhoproductions.hugheswhoslots/: AndroidManifest.xml  build.xml  how-to.txt  local.properties
com.hugheswhoproductions.hugheswhoslots/app/: build.gradle
com.hugheswhoproductions.hugheswhoslots/jni/: Application.mk
consoleTestAp/: CMakeLists.txt  actorDataList.lst  consoleTestAp.sln  menuOther.lst  test.json
consoleTestAp/consoleTestAp/: CMakeLists.txt  consoleTestAp.cpp  consoleTestAp.vcxproj  consoleTestAp.vcxproj.filters  scriptListTable.lst  testScript.ang
gameTemplate/: CMakeLists.txt  gameTemplate.sln  gameTemplate.vcxproj  gameTemplate.vcxproj.filters  gametemplate.code-workspace  raspbian build setup.txt
gameTemplate/nbproject/: configurations.xml  project.xml
gameTemplate/source/: CMakeLists.txt
gameTemplate/source/ai/: ballai.cpp  ballai.h
gameTemplate/source/game/: game.cpp  game.h  main.cpp
gameTemplate/source/smartGUI/: smartapplysettingsbtn.cpp  smartapplysettingsbtn.h  smartconfirmbtn.cpp  smartdeadzoneslider.cpp  smartdeadzoneslider.h  smartfullscreencheckbox.cpp  smartkeybindbtn.cpp  smartkeybindbtn.h  smartresetkeybind.h  smartresolutionbtn.cpp  smartsettingsmenubtn.h  smartvsynccheckbox.cpp
gameTemplate/source/state/: commonstate.cpp  commonstate.h  gamedefs.h  loadstate.cpp  loadstate.h  runstate.cpp  runstate.h  startupstate.cpp  titlescreenstate.cpp  titlescreenstate.h
obsolete/: isprite2d.cpp  isprite3d.h  physicsworldmanager.cpp  test.txt  threadpoolmanager.cpp  threadpoolmanager.h  worldpoint.cpp  worldpoint.h
obsolete/cubeWorks/: CMakeLists.txt  cubeWorks.opensdf  cubeWorks.sln  gameTemplate.vcxproj  gameTemplate.vcxproj.filters
obsolete/cubeWorks/data/objects/2d/hud/control/: progress_bar.ctrl
obsolete/cubeWorks/data/objects/2d/loadscreens/: gameLoadScreen.cfg  startupLoadScreen.cfg
obsolete/cubeWorks/data/objects/2d/menu/: confirmation.menu  key_bindings.menu  pause.menu  settings.menu  title_screen.menu  tree.menu
obsolete/cubeWorks/data/objects/2d/menu/control/: back_button.ctrl  bounce_button_list.ctrl  button_125x55.ctrl  button_145x55.ctrl  button_capture_label.ctrl  button_list.ctrl  button_slider.ctrl  consecutive_explosions_slider.ctrl  cube_bounce_slider.ctrl  cubes_explosion_slider.ctrl  key_binding_button.ctrl  key_binding_button_label.ctrl  key_binding_instructions_label.ctrl  key_binding_reset_button.ctrl  key_binding_scroll_box.ctrl  key_binding_seperator.ctrl  key_binding_slider.ctrl
obsolete/cubeWorks/data/objects/2d/objectDataList/: dataListTable.lst  loadingScreenDataList.lst  menuBackgrounds.lst  menuDataList.lst  menuGeneric.lst  runDataList.lst  startupDataList.lst  titleScreenDataList.lst
obsolete/cubeWorks/data/objects/2d/physics/: gamePhysics.cfg
obsolete/cubeWorks/data/objects/2d/scripts/: background.ang  menu.ang  menu_defs.ang  utilities.ang
obsolete/cubeWorks/data/objects/3d/objectDataList/: cube.lst
obsolete/cubeWorks/data/objects/3d/physics/: cubePhysics.cfg  physicsListTable.lst
obsolete/cubeWorks/data/objects/3d/scripts/: cube.ang  defs.ang  scriptListTable.lst  utilities.ang
obsolete/cubeWorks/data/settings/: settings-mobile.cfg  settings.cfg
obsolete/cubeWorks/data/shaders/: shader.cfg  shader_mesh_no_txt_v100.frag  shader_mesh_v100.vert  shader_v100.vert
obsolete/cubeWorks/data/sound/: cubeSound.lst
obsolete/cubeWorks/source/: CMakeLists.txt
obsolete/cubeWorks/source/game/: game.cpp  game.h  main.cpp
obsolete/cubeWorks/source/smartGUI/: smartapplysettingsbtn.cpp  smartconfirmbtn.cpp  smartkeybindbtn.cpp  smartresolutionbtn.cpp  smartresolutionbtn.h  smartsettingsmenubtn.cpp  smartsettingsmenubtn.h
obsolete/cubeWorks/source/state/: commonstate.cpp  commonstate.h  igamestate.h  loadscreenanimationinfo.h  loadstate.cpp  loadstate.h  runstate.cpp  runstate.h  startupstate.cpp  startupstate.h  titlescreenstate.cpp  titlescreenstate.h
obsolete/org.lapcatgames.templateAnt/: AndroidManifest.xml  build.xml
org.howiesfunware.PachinkoChallenge/: local.properties
org.howiesfunware.PachinkoChallenge/app/: build.gradle
org.lapcatgames.PachinkoChallenge/app/: build.gradle
org.lapcatgames.template/: local.properties
scriptGameTemplate/: CMakeLists.txt  gameTemplate.vcxproj  gameTemplate.vcxproj.filters
scriptGameTemplate/source/: CMakeLists.txt  scriptListTable.lst  utilities.ang
scriptGameTemplate/source/ai/: ballai.cpp  ballai.h
scriptGameTemplate/source/game/: game.ang  game.cpp  game.h  main.ang  main.cpp  utilities.ang
scriptGameTemplate/source/main/: game.cpp  main.cpp
scriptGameTemplate/source/smartGUI/: smartapplysettingsbtn.cpp  smartconfirmbtn.h  smartdeadzoneslider.h  smartfullscreencheckbox.cpp  smartkeybindbtn.cpp  smartkeybindbtn.h  smartresolutionbtn.cpp  smartresolutionbtn.h  smartvsynccheckbox.cpp
scriptGameTemplate/source/state/: commonstate.cpp  gamedefs.h  igamestate.ang  igamestate.h  loadstate.cpp  startupstate.ang  startupstate.h  statemessage.ang  titlescreenstate.ang  titlescreenstate.cpp
tools/: build_msvc10.bat  classtemplate.cpp  classtemplate.h  how to build boost library.txt
(+678 files in other folders)
